# l2leak

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTORS  README.md  dbconn.ini
CacheD/: CMakeLists.txt
CacheD/etc/: CMakeLists.txt  l2cache.ini  perfmon.ini
CacheD/reversed/: Cached.h
CacheD/src/: CMakeLists.txt  main.cpp
CacheD/src/config/: CMakeLists.txt  Config.cpp
CacheD/src/data/: CAddData.cpp  CMakeLists.txt  CReadFile.cpp  CReadItemData.cpp  CWatchList.cpp  CWatchObject.cpp
CacheD/src/model/: AbnormalEffect.cpp  AgitDecors.cpp  AgitInfo.cpp  CAccount.cpp  CAlliance.cpp  CAllianceDb.cpp  CAllianceWar.cpp  CAllianceWarDb.cpp  CAnnounce.cpp  CBattleCampDb.cpp  CBitStorage.cpp  CCastle.cpp  CCastleDb.cpp  CCommunity.cpp  CFriendCollection.cpp  CFriendsDb.cpp  CItem.cpp  CItemData.cpp  CMakeLists.txt  CPet.cpp  CPetDb.cpp  CPetWareHouse.cpp  CPledge.cpp  CPledgeCrest.cpp  CPledgeCrestDb.cpp  CPledgeDb.cpp  CPledgeWar.cpp  CPledgeWarDb.cpp  CTransaction.cpp  CTreeNodeData.cpp  CUser.cpp  CUserDb.cpp  CWareHouse.cpp  ItemChangeScope.cpp  ItemConsumeType.cpp  PledgeFields.cpp  PledgeMemberFields.cpp  PledgeMemberOperations.cpp  Quest.cpp  TransactType.cpp  (+1 more)
CacheD/src/network/: CAdminServer.cpp  CAdminSocket.cpp  CBBSPacket.cpp  CCacheDServer.cpp  CMakeLists.txt  CNpcDbSocket.cpp  CServerSocket.cpp
CacheD/src/threads/: CMakeLists.txt  Threads.cpp
CacheD/src/ui/: CMakeLists.txt  MainWindow.cpp  resources.rc
CachedScript/: CMakeLists.txt  Itemname-e.txt  Itemname-k.txt  QuestName-c.txt  QuestName-j.txt  QuestName-k.txt  gmskilldata-cn.txt  gmskilldata-e.txt  gmskilldata-j.txt  gmskilldata-k.txt  gmskilldata-tw.txt  itemcache-cn.txt  itemcache-e.txt  itemcache-j.txt  itemcache-k.txt  itemcache-tw.txt  itemcache.txt  itemname-j.txt  itemname-tw.txt  npccache-e.txt  npccache-k.txt  npccache-tw.txt  npcname-e.txt  npcname-j.txt  npcname-k.txt  npcname-tw.txt  questcomp-cn.txt  questcomp-e.txt  questcomp-j.txt  questcomp-k.txt  questcomp-tw.txt  questname-e.txt  skilldata.txt  skillname-cn.txt  skillname-e.txt  skillname-j.txt  skillname-k.txt  skillname-tw.txt  vssver.scc
DBScript/: CMakeLists.txt  ReleaseAuthDBSchema.sql  lin2comm.sql  lin2db_update.sql  lin2log.sql  lin2report.sql  lin2user.sql  lin2world.sql
L2Auth/: CMakeLists.txt
L2Auth/etc/: CMakeLists.txt  config.txt
L2Auth/include/l2auth/: CIOObject.h
L2Auth/reversed/: L2AuthD.h  defs.h
L2Auth/src/: CIOObject.cpp  CMakeLists.txt  main.cpp
L2Auth/src/config/: CIPList.cpp  CMakeLists.txt  Config.cpp
L2Auth/src/crypt/: Blowfish.cpp  CMakeLists.txt  DesBackEnd.cpp  DesFrontEnd_foreign.cpp  DesNewCrypt.cpp  OldCrypt.cpp  PwdCrypt.cpp
L2Auth/src/db/: CAccount.cpp  CDBConn.cpp  CMakeLists.txt  CServerUserCountStatus.cpp  DBEnv.cpp
L2Auth/src/logger/: CFileLog.cpp  CLogdFilelog.cpp  CMakeLists.txt  LogId.cpp  LogType.cpp
L2Auth/src/model/: AccountDB.cpp  CIPAccessLimit.cpp  CMakeLists.txt  CServerKickList.cpp  CServerList.cpp  LoginFailReason.cpp  LoginState.cpp  LoginUser.cpp  PlayFail.cpp  ServerKind.cpp  ServerPacketList.cpp  ServersProvider.cpp  SexAndCentury.cpp  WorldServer.cpp
L2Auth/src/network/: BufferReader.cpp  CAuthOverlapped.cpp  CAuthOverlappedPool.cpp  CAuthOverlappedSlot.cpp  CAuthPacket.cpp  CAuthPacketPool.cpp  CAuthPacketSlot.cpp  CAuthServer.cpp  CAuthSocket.cpp  CIOBuffer.cpp  CIOBufferPool.cpp  CIOBufferSlot.cpp  CIOServer.cpp  CIOServerInt.cpp  CIOSocket.cpp  CLogPacket.cpp  CLogPacketPool.cpp  CLogPacketSlot.cpp  CLogSocket.cpp  CMakeLists.txt  CSocketInt.cpp  CWantedPacket.cpp  CWantedPacketPool.cpp  CWantedPacketSlot.cpp  CWantedSocket.cpp  IPPacket.cpp  IPPacketPool.cpp  IPPacketSlot.cpp  IPSessionDB.cpp  IPSocket.cpp  PacketUtils.cpp  SocketStatus.cpp  WorldSrvPacket.cpp  WorldSrvPacketPool.cpp  WorldSrvPacketSlot.cpp  WorldSrvServer.cpp  WorldSrvSocket.cpp
L2Auth/src/threads/: CIOTimer.cpp  CIOTopTimer.cpp  CJob.cpp  CLock.cpp  CMakeLists.txt  CRWLock.cpp  IOCP.cpp  Threading.cpp
L2Auth/src/ui/: CLog.cpp  CMakeLists.txt  CReporter.cpp  MainWindow.cpp  resources.rc
L2Auth/src/utils/: CExceptionInit.cpp  CMakeLists.txt  CoreDump.cpp  SendMail.cpp  Utils.cpp
L2Core/: CMakeLists.txt
L2Core/include/l2core/: AppInstance.h  CIOObject.h  MemoryObject.h  Orts.h
L2Core/src/: CIOObject.cpp  CMakeLists.txt  MemoryObject.cpp
L2Core/src/crypt/: CMakeLists.txt  DummyCrypt.cpp  XorCrypt.cpp
L2Core/src/db/: CMakeLists.txt  CSQLQueue.cpp  DBConn.cpp
L2Core/src/geometry/: CMakeLists.txt  CTerritory.cpp  FVector.cpp  Math.cpp  SpawnPos.cpp
L2Core/src/ipc/: CMakeLists.txt  CSharedRWLock.cpp
L2Core/src/logger/: CLog.cpp  CMakeLists.txt  FileBuffers.cpp  LogId.cpp  LogType.cpp  ServerTypes.cpp
L2Core/src/memory/: Allocator.cpp  CMakeLists.txt
L2Core/src/network/: CIOBuffer.cpp  CIOBufferPool.cpp  CIOCPMessage.cpp  CIOServer.cpp  CIOSocket.cpp  CLogCli.cpp  CLogSocket.cpp  CMakeLists.txt  CPacket.cpp  CPacketPool.cpp  CSlot.cpp  PacketUtils.cpp  (+1 more)
L2LogD/: CMakeLists.txt
L2LogD/etc/: CMakeLists.txt  itemname-k.txt  l2logd.ini  npcname-k.txt  perfmon.ini  skillname-k.txt
L2LogD/reversed/: L2LogD.c  L2LogD.h
L2LogD/src/: CMakeLists.txt  main.cpp
PetitionD/src/: AuthConn.cpp  CMakeLists.txt  ClientConn.cpp  Log.cpp  PetitionService.cpp  StdAfx.cpp  UserDB.cpp  WorldEmu.cpp  WorldEmu.rc  WorldEmuDlg.cpp  clientsocket.cpp  md5.cpp  petitionconn.cpp  tlvsocket.cpp
tests/: CMakeLists.txt
tests/L2Core/: CMakeLists.txt
yacc/: CMakeLists.txt
yacc/include/: yybdefs.h  yyglobal.h  yytdefs.h  yywclex.h  yywcpars.h
yacc/src/: yydefs.h  yywcback.cpp  yywccpya.cpp  yywcdci.cpp  yywcdcic.cpp  yywcdela.cpp  yywcdisc.cpp  yywcdop.cpp  yywcdpop.cpp  yywcecho.cpp  yywcgetc.cpp  yywcgtok.cpp  yywcinp.cpp  yywclcln.cpp  yywclcon.cpp  yywclcre.cpp  yywcldbg.cpp  yywcldes.cpp  yywclerr.cpp  yywcless.cpp  yywclex.cpp  yywclexc.cpp  yywclvts.cpp  yywclvtv.cpp  yywcnewa.cpp  yywcoutp.cpp  yywcpar.cpp  yywcpcln.cpp  yywcpcon.cpp  yywcpcre.cpp  yywcpdbg.cpp  yywcpdes.cpp  yywcperr.cpp  yywcpop.cpp  yywcpush.cpp  yywcres.cpp  yywcserr.cpp  yywcsin.cpp  yywcsofw.cpp  yywcsskp.cpp  (+15 more)
(+3549 files in other folders)
