project(L2Core)
cmake_minimum_required(VERSION 3.5)

set(LINEAGE_2_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
set(L2CORE_DIR ${LINEAGE_2_ROOT_DIR}/L2Core)

include_directories(${LINEAGE_2_ROOT_DIR}/L2Core/include)
include_directories(${LINEAGE_2_ROOT_DIR}/CacheD/include)
include_directories(${LINEAGE_2_ROOT_DIR}/L2LogD/include)
include_directories(${LINEAGE_2_ROOT_DIR}/L2NPC/include)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)

set_property(TARGET ${PROJECT_NAME}_crypt PROPERTY FOLDER "L2Core")
set_property(TARGET l2npc_${PROJECT_NAME}_geometry PROPERTY FOLDER "CacheD_L2Core")

set_property(TARGET cached_${PROJECT_NAME} PROPERTY FOLDER "CacheD_L2Core")
set_property(TARGET cached_${PROJECT_NAME}_db PROPERTY FOLDER "CacheD_L2Core")
set_property(TARGET cached_${PROJECT_NAME}_memory PROPERTY FOLDER "CacheD_L2Core")
set_property(TARGET cached_${PROJECT_NAME}_logger PROPERTY FOLDER "CacheD_L2Core")
set_property(TARGET cached_${PROJECT_NAME}_network PROPERTY FOLDER "CacheD_L2Core")
set_property(TARGET cached_${PROJECT_NAME}_network_packets PROPERTY FOLDER "CacheD_L2Core")
set_property(TARGET cached_${PROJECT_NAME}_threads PROPERTY FOLDER "CacheD_L2Core")
set_property(TARGET cached_${PROJECT_NAME}_utils PROPERTY FOLDER "CacheD_L2Core")
set_property(TARGET cached_${PROJECT_NAME}_utils_dbg PROPERTY FOLDER "CacheD_L2Core")

set_property(TARGET l2logd_${PROJECT_NAME} PROPERTY FOLDER "L2LogD_L2Core")
set_property(TARGET l2logd_${PROJECT_NAME}_db PROPERTY FOLDER "L2LogD_L2Core")
set_property(TARGET l2logd_${PROJECT_NAME}_memory PROPERTY FOLDER "L2LogD_L2Core")
set_property(TARGET l2logd_${PROJECT_NAME}_logger PROPERTY FOLDER "L2LogD_L2Core")
set_property(TARGET l2logd_${PROJECT_NAME}_network PROPERTY FOLDER "L2LogD_L2Core")
set_property(TARGET l2logd_${PROJECT_NAME}_network_packets PROPERTY FOLDER "L2LogD_L2Core")
set_property(TARGET l2logd_${PROJECT_NAME}_threads PROPERTY FOLDER "L2LogD_L2Core")
set_property(TARGET l2logd_${PROJECT_NAME}_utils PROPERTY FOLDER "L2LogD_L2Core")
set_property(TARGET l2logd_${PROJECT_NAME}_utils_dbg PROPERTY FOLDER "L2LogD_L2Core")

set_property(TARGET l2npc_${PROJECT_NAME} PROPERTY FOLDER "L2NPC_L2Core")
set_property(TARGET l2npc_${PROJECT_NAME}_memory PROPERTY FOLDER "L2NPC_L2Core")
set_property(TARGET l2npc_${PROJECT_NAME}_logger PROPERTY FOLDER "L2NPC_L2Core")
set_property(TARGET l2npc_${PROJECT_NAME}_network PROPERTY FOLDER "L2NPC_L2Core")
set_property(TARGET l2npc_${PROJECT_NAME}_network_packets PROPERTY FOLDER "L2NPC_L2Core")
set_property(TARGET l2npc_${PROJECT_NAME}_threads PROPERTY FOLDER "L2NPC_L2Core")
set_property(TARGET l2npc_${PROJECT_NAME}_utils PROPERTY FOLDER "L2NPC_L2Core")
set_property(TARGET l2npc_${PROJECT_NAME}_utils_dbg PROPERTY FOLDER "L2NPC_L2Core")
set_property(TARGET l2npc_${PROJECT_NAME}_ipc PROPERTY FOLDER "L2LogD_L2Core")
