set(HEADERS
    ${CACHED_DIR}/include/cached/model/AbnormalEffect.h
    ${CACHED_DIR}/include/cached/model/AgitDecors.h
    ${CACHED_DIR}/include/cached/model/AgitInfo.h
    ${CACHED_DIR}/include/cached/model/BattleCampOperations.h
    ${CACHED_DIR}/include/cached/model/CAccount.h
    ${CACHED_DIR}/include/cached/model/CAnnounce.h
    ${CACHED_DIR}/include/cached/model/CAlliance.h
    ${CACHED_DIR}/include/cached/model/CAllianceDb.h
    ${CACHED_DIR}/include/cached/model/CAllianceWar.h
    ${CACHED_DIR}/include/cached/model/CAllianceWarDb.h
    ${CACHED_DIR}/include/cached/model/CastleWarRegistrationOperations.h
    ${CACHED_DIR}/include/cached/model/CastleWarRegistrationTypes.h
    ${CACHED_DIR}/include/cached/model/CBattleCampDb.h
    ${CACHED_DIR}/include/cached/model/CBitStorage.h
    ${CACHED_DIR}/include/cached/model/CCastle.h
    ${CACHED_DIR}/include/cached/model/CCastleDb.h
    ${CACHED_DIR}/include/cached/model/CCommunity.h
    ${CACHED_DIR}/include/cached/model/CFriendCollection.h
    ${CACHED_DIR}/include/cached/model/CFriendsDb.h
    ${CACHED_DIR}/include/cached/model/ItemChangeScope.h
    ${CACHED_DIR}/include/cached/model/ItemConsumeType.h
    ${CACHED_DIR}/include/cached/model/CItem.h
    ${CACHED_DIR}/include/cached/model/CItemData.h
    ${CACHED_DIR}/include/cached/model/ConfirmCastleDefenceTypes.h
    ${CACHED_DIR}/include/cached/model/CPet.h
    ${CACHED_DIR}/include/cached/model/CPetDb.h
    ${CACHED_DIR}/include/cached/model/CPetWareHouse.h
    ${CACHED_DIR}/include/cached/model/CPledge.h
    ${CACHED_DIR}/include/cached/model/CPledgeDb.h
    ${CACHED_DIR}/include/cached/model/CPledgeWar.h
    ${CACHED_DIR}/include/cached/model/CPledgeWarDb.h
    ${CACHED_DIR}/include/cached/model/CPledgeCrest.h
    ${CACHED_DIR}/include/cached/model/CPledgeCrestDb.h
    ${CACHED_DIR}/include/cached/model/CWareHouse.h
    ${CACHED_DIR}/include/cached/model/CTreeNodeData.h
    ${CACHED_DIR}/include/cached/model/CUser.h
    ${CACHED_DIR}/include/cached/model/CUserDb.h
    ${CACHED_DIR}/include/cached/model/CharacterCreationResults.h
    ${CACHED_DIR}/include/cached/model/CharacterDeletetionResults.h
    ${CACHED_DIR}/include/cached/model/CTransaction.h
    ${CACHED_DIR}/include/cached/model/SellItemsResults.h
    ${CACHED_DIR}/include/cached/model/Quest.h
    ${CACHED_DIR}/include/cached/model/PledgeFields.h
    ${CACHED_DIR}/include/cached/model/PledgeMemberFields.h
    ${CACHED_DIR}/include/cached/model/PledgeMemberOperations.h
    ${CACHED_DIR}/include/cached/model/WareHouseType.h
    ${CACHED_DIR}/include/cached/model/TransactType.h
)

set(SOURCES
    AgitDecors.cpp
    AgitInfo.cpp
    CAccount.cpp
    CAnnounce.cpp
    CAlliance.cpp
    CAllianceDb.cpp
    CAllianceWar.cpp
    CAllianceWarDb.cpp
    CBattleCampDb.cpp
    CBitStorage.cpp
    CCastle.cpp
    CCastleDb.cpp
    CCommunity.cpp
    ItemChangeScope.cpp
    ItemConsumeType.cpp
    CItem.cpp
    CItemData.cpp
    CFriendCollection.cpp
    CFriendsDb.cpp
    CPet.cpp
    CPetDb.cpp
    CPetWareHouse.cpp
    CPledge.cpp
    CPledgeDb.cpp
    CPledgeWar.cpp
    CPledgeWarDb.cpp
    CPledgeCrest.cpp
    CPledgeCrestDb.cpp
    CTreeNodeData.cpp
    CUser.cpp
    CUserDb.cpp
    CTransaction.cpp
    CWareHouse.cpp
    AbnormalEffect.cpp
    Quest.cpp
    PledgeFields.cpp
    PledgeMemberFields.cpp
    PledgeMemberOperations.cpp
    WareHouseType.cpp
    TransactType.cpp
)

add_library(${PROJECT_NAME}_model STATIC ${SOURCES} ${HEADERS})
